--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -2148,6 +2148,7 @@ html {
 	font-size: 16px;
 	line-height: 1.5;
 	color: #010101;	
+    padding: 0 5px;
 }
 
 .vd_serviceincenter_wrapper-virtualrates-list-header .icons {
