any number of office plans

--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -3441,6 +3441,8 @@ html {
 	position: absolute;
 }
 
+.vd_serviceincenter_wrapper-plan {margin: 2em 0 1em;}
+
 .vd_services_header {
 	margin: 60px auto 60px auto;
 }
