booking cost calculation disabled

--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1778,7 +1778,7 @@ html {
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right {
 	float: right;
 	width: 716px;
-	margin-right: 30px;
+	margin: 0 30px 30px 0;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right input {
