--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1720,11 +1720,9 @@ html {
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price {
-    float: right;
 /*     width: 503px; */
-    height: 100px;
-    line-height: 101px;
-    padding-left: 30px;
+	 padding-top: 35px;
+     padding-left: 30px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price button {
@@ -1733,7 +1731,7 @@ html {
 	border: none;
 	background-color: #86bf37;
 	float: right;
-    margin-top: 20px;
+    margin-top: -40px;
     margin-left: 20px;
     text-transform: uppercase;
     color: #ffffff;
@@ -1749,6 +1747,7 @@ html {
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
+	padding-left: 25px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form {
@@ -2120,6 +2119,14 @@ html {
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom p span {
 	font-weight: 700;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price span.special {
+	font-size: 16px;
+	font-weight: 400;
+	color: #e62e66;
+	display: inline-block;
+	margin-top: -5px;
 }
 
 /* virtual offices details styles */
@@ -2566,7 +2573,7 @@ html {
 	background-image: url(../images/svg/information-active.svg);
 }
 
-#tooltip_content_wrapper {
+.tooltip_content_wrapper {
 	display: none;
 }
 
@@ -2574,13 +2581,13 @@ html {
 	background-color: #fafafc !important;
 }
 
-#tooltip_content {
+.tooltip_content {
 	width: 466px;
 	height: 266px;
 	padding: 30px 25px;
 }
 
-#tooltip_content p {
+.tooltip_content p {
 	/* 	font-family: Lato-Regular; */
 	font-size: 12px;
 	line-height: 1.3;
@@ -2588,14 +2595,9 @@ html {
 	padding-bottom: 6px;
 }
 
-#tooltip_content .title {
-/* 	font-family: Lato-Black; */
+.tooltip_content strong {
 	font-weight: 700;
-	font-size: 12px;
-	line-height: 1.3;
 	color: #262626;
-	display: block;
-    padding: 6px 0px;	
 }
 
 /* */
