--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -52,10 +52,6 @@
     font-style: normal;
 }
 
-html {
-	min-width: 1440px;
-}
-
 .inner {
 	padding-top: 10px;
 }
@@ -127,7 +123,6 @@ html {
 }
 
 .vd_officelistwrapper-office-photo img {
-	min-height: 100%;
 	width: auto;
 }
 
@@ -578,6 +573,7 @@ html {
 	border-top-width: 1px;
 	border-bottom-width: 0px;
 	text-align: center;
+	width: 240px;
 }
 
 .vd_singleofficewrapper-content-services-table .coworking_block {
@@ -645,12 +641,21 @@ html {
 	font-size: 20px;
 	color: #000000;
 	text-align: center;
+	display: block;
+	height: 35px;
 }
 
 .vd_singleofficewrapper-content-services-table .service_price span {
 	font-weight: 700;
 }
-
+.vd_singleofficewrapper-content-services-table .service_header_label_block span{
+	display: block;
+	margin-top: -60px;
+}
+.vd_singleofficewrapper-content-services-table .service_header_label_block span + span{
+	display: block;
+	margin-top: 30px;
+}
 .vd_singleofficewrapper-content-services-table .service_header_label_block {
 	text-align: left;
 	font-weight: 700;
@@ -679,7 +684,11 @@ html {
 	background-size: 40px 40px;
     background-repeat: no-repeat;
 	background-position: 0px 10px;
-	padding-left: 55px;
+	/*width: 240px;*/
+	height: auto;
+	/*display: block;
+	float: left;*/
+	text-align: center;
 }
 
 .service_header_content_block.coworking {
@@ -687,7 +696,9 @@ html {
 	background-size: 44px 44px;
     background-repeat: no-repeat;
 	background-position: 0px 8px;
-	padding-left: 55px;
+	height: auto;
+	text-align: center;
+	
 }
 
 .service_header_content_block.meeting {
@@ -695,7 +706,9 @@ html {
 	background-size: 53px 32px;
     background-repeat: no-repeat;
 	background-position: 0px 14px;
-	padding-left: 60px;
+	height: auto;
+	text-align: center;
+	
 }
 
 .service_header_content_block.virtual {
@@ -703,14 +716,26 @@ html {
 	background-size: 38px 44px;
     background-repeat: no-repeat;
 	background-position: 0px 8px;
-	padding-left: 45px;
+	height: auto;
+	text-align: center;
+	
 }
 
 .service_header_content_block span {
-	border-bottom: 2px solid #000000;
 /* 	font-family: Lato-Semibold; */
-	font-size: 20px;
+	font-size: 18px;
+	padding-top: 25px;
 	color: #000000;
+}
+.service_header_content_block span.title{
+	border-bottom: 2px solid #000000;
+	padding-top: 25px;
+	display: inline-block;
+	
+}
+.service_details_in_table{
+	padding-top: 20px;
+display: block;
 }
 
 .vd_singleofficewrapper-content-contacts {
@@ -1670,7 +1695,7 @@ html {
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-name {
 	float: left;
-	width: 215px;
+	width: 165px;
 	height: 100px;
 	border-right: 2px solid #ffffff;
 /* 	font-family: Lato-Black; */
@@ -1678,7 +1703,7 @@ html {
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
-	padding-left: 25px;
+	padding: 0 30px;
 	display: table;
 }
 
@@ -1696,44 +1721,45 @@ html {
 /* 	font-family: Lato-Regular; */
 	font-size: 16px;
 	color: #010101;
-	padding-left: 55px;
+	padding-left: 70px;
 	background-image: url('../images/svg/icon-office-black.svg');
     background-size: 24px 24px;
     background-repeat: no-repeat;
-    background-position: 20px 36px;
+    background-position: 30px 36px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-people {
 	float: left;
-	width: 180px;
+	width: 202px;
 	height: 101px;
 	border-right: 2px solid #ffffff;
 	line-height: 101px;
 /* 	font-family: Lato-Regular; */
 	font-size: 16px;
 	color: #010101;
-	padding-left: 55px;
+	padding-left: 70px;
 	background-image: url('../images/number_of_people_closed.png');
     background-size: 32px 32px;
     background-repeat: no-repeat;
-    background-position: 15px 36px;
+    background-position: 30px 36px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price {
+    float: right;
 /*     width: 503px; */
-	 padding-top: 35px;
-     padding-left: 25px;
-     position: relative;
+    height: 100px;
+    line-height: 101px;
+    padding-left: 30px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price button {
-	position: absolute;
 	height: 60px;
 	width: 205px;
 	border: none;
 	background-color: #86bf37;
-	top: 20px;
-	right: 0;
+	float: right;
+    margin-top: 20px;
+    margin-left: 20px;
     text-transform: uppercase;
     color: #ffffff;
 }
@@ -1748,7 +1774,6 @@ html {
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
-	padding-left: 25px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form {
@@ -1778,7 +1803,7 @@ html {
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right {
 	float: right;
 	width: 716px;
-	margin: 0 30px 30px 0;
+	margin-right: 30px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right input {
@@ -2122,14 +2147,6 @@ html {
 	font-weight: 700;
 }
 
-.vd_serviceincenter_wrapper-meetingrates-list-item-header-price span.special {
-	font-size: 16px;
-	font-weight: 400;
-	color: #e62e66;
-	display: inline-block;
-	margin-top: -5px;
-}
-
 /* virtual offices details styles */
 
 .vd_serviceincenter_wrapper-virtualrates {
@@ -2171,10 +2188,13 @@ html {
 .vd_serviceincenter_wrapper-virtualrates-list-header .icons img:first-of-type {
 	margin: 0px 15px 0px 0px;
 }
-
+.virtualrates_main_table_cell{
+	vertical-align: top;
+	height: 100%;
+}
 .vd_serviceincenter_wrapper-virtualrates table {
 	width: 100%;
-	
+	height: 100%
 }
 
 .vd_serviceincenter_wrapper-virtualrates table tr.table_header {
@@ -2204,6 +2224,10 @@ html {
 	background-image: url(../images/delovoy_fake_table_arrow_side.png);
     background-repeat: no-repeat;
     background-position: 15px 20px;
+    display: inline-block;
+	background-color: rgb(237, 236, 245);
+	height: 90px;
+	width: 100%;
 }
 
 .vd_serviceincenter_wrapper-virtualrates table th.label.open {
@@ -2471,6 +2495,10 @@ html {
 
 /* */
 
+.tariff_name_in_cell {
+	display: none;
+}
+
 .vd_serviceincenter_wrapper-virtualrates-details {
 	margin: 40px auto 0px auto;
     width: 100%;
@@ -2530,6 +2558,9 @@ html {
 	border-bottom: none;
 	text-align: left;
 }
+.additional_options{
+	display: none;
+}
 
 .vd_serviceincenter_wrapper-virtualrates-details-list-item-table table tr td {
 	border-bottom: 1px solid #edecf5;
@@ -2574,7 +2605,7 @@ html {
 	background-image: url(../images/svg/information-active.svg);
 }
 
-.tooltip_content_wrapper {
+#tooltip_content_wrapper {
 	display: none;
 }
 
@@ -2582,13 +2613,13 @@ html {
 	background-color: #fafafc !important;
 }
 
-.tooltip_content {
+#tooltip_content {
 	width: 466px;
 	height: 266px;
 	padding: 30px 25px;
 }
 
-.tooltip_content p {
+#tooltip_content p {
 	/* 	font-family: Lato-Regular; */
 	font-size: 12px;
 	line-height: 1.3;
@@ -2596,9 +2627,14 @@ html {
 	padding-bottom: 6px;
 }
 
-.tooltip_content strong {
+#tooltip_content .title {
+/* 	font-family: Lato-Black; */
 	font-weight: 700;
+	font-size: 12px;
+	line-height: 1.3;
 	color: #262626;
+	display: block;
+    padding: 6px 0px;	
 }
 
 /* */
@@ -3443,8 +3479,6 @@ html {
 	margin-left: 10px;
 	position: absolute;
 }
-
-.vd_serviceincenter_wrapper-plan {margin: 2em 0 1em;}
 
 .vd_services_header {
 	margin: 60px auto 60px auto;
@@ -4783,9 +4817,9 @@ html {
 	float: left;
 }
 .vd_specialoffer-header h1 {	
-	margin-top: 18px;
+	height: 46px;
+	/*font-family: Lato-Bold;*/
 	font-size: 30px;
-	font-weight: 600;	
 	line-height: 1.3;
 	color: #000000;
 	float: left;
@@ -4794,6 +4828,7 @@ html {
 	width: 100%;
 	float: left;
 	margin: 25px 0 0 0;
+	/*font-family: Lato-Regular;*/
 	font-size: 20px;
 	line-height: 1.5;
 }
@@ -4805,8 +4840,8 @@ html {
 }
 
 .vd_specialoffer-offers-title {
+	/* font-family: Lato-Black; */
 	font-size: 30px;
-	font-weight: 700;
 	line-height: 1.5;
 	color: #000000;
 	text-align: center;	
