--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -684,10 +684,7 @@
 	background-size: 40px 40px;
     background-repeat: no-repeat;
 	background-position: 0px 10px;
-	/*width: 240px;*/
-	height: auto;
-	/*display: block;
-	float: left;*/
+	padding-left: 55px;
 	text-align: center;
 }
 
@@ -696,9 +693,8 @@
 	background-size: 44px 44px;
     background-repeat: no-repeat;
 	background-position: 0px 8px;
-	height: auto;
+	padding-left: 55px;
 	text-align: center;
-	
 }
 
 .service_header_content_block.meeting {
@@ -706,9 +702,8 @@
 	background-size: 53px 32px;
     background-repeat: no-repeat;
 	background-position: 0px 14px;
-	height: auto;
+	padding-left: 60px;
 	text-align: center;
-	
 }
 
 .service_header_content_block.virtual {
@@ -716,17 +711,17 @@
 	background-size: 38px 44px;
     background-repeat: no-repeat;
 	background-position: 0px 8px;
-	height: auto;
+	padding-left: 45px;
 	text-align: center;
-	
 }
 
 .service_header_content_block span {
 /* 	font-family: Lato-Semibold; */
-	font-size: 18px;
+	font-size: 20px;
 	padding-top: 25px;
 	color: #000000;
 }
+
 .service_header_content_block span.title{
 	border-bottom: 2px solid #000000;
 	padding-top: 25px;
@@ -1695,7 +1690,7 @@ display: block;
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-name {
 	float: left;
-	width: 165px;
+	width: 215px;
 	height: 100px;
 	border-right: 2px solid #ffffff;
 /* 	font-family: Lato-Black; */
@@ -1703,7 +1698,7 @@ display: block;
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
-	padding: 0 30px;
+	padding-left: 25px;
 	display: table;
 }
 
@@ -1721,45 +1716,44 @@ display: block;
 /* 	font-family: Lato-Regular; */
 	font-size: 16px;
 	color: #010101;
-	padding-left: 70px;
+	padding-left: 55px;
 	background-image: url('../images/svg/icon-office-black.svg');
     background-size: 24px 24px;
     background-repeat: no-repeat;
-    background-position: 30px 36px;
+    background-position: 20px 36px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-people {
 	float: left;
-	width: 202px;
+	width: 180px;
 	height: 101px;
 	border-right: 2px solid #ffffff;
 	line-height: 101px;
 /* 	font-family: Lato-Regular; */
 	font-size: 16px;
 	color: #010101;
-	padding-left: 70px;
+	padding-left: 55px;
 	background-image: url('../images/number_of_people_closed.png');
     background-size: 32px 32px;
     background-repeat: no-repeat;
-    background-position: 30px 36px;
+    background-position: 15px 36px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price {
-    float: right;
 /*     width: 503px; */
-    height: 100px;
-    line-height: 101px;
-    padding-left: 30px;
+	 padding-top: 35px;
+     padding-left: 25px;
+     position: relative;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-header-price button {
+	position: absolute;
 	height: 60px;
 	width: 205px;
 	border: none;
 	background-color: #86bf37;
-	float: right;
-    margin-top: 20px;
-    margin-left: 20px;
+	top: 20px;
+	right: 0;
     text-transform: uppercase;
     color: #ffffff;
 }
@@ -1774,6 +1768,7 @@ display: block;
 	font-size: 20px;
 	line-height: 1.5;
 	color: #000000;
+	padding-left: 25px;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form {
@@ -1803,7 +1798,7 @@ display: block;
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right {
 	float: right;
 	width: 716px;
-	margin-right: 30px;
+	margin: 0 30px 30px 0;
 }
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-right input {
@@ -2145,6 +2140,14 @@ display: block;
 
 .vd_serviceincenter_wrapper-meetingrates-list-item-form-bottom p span {
 	font-weight: 700;
+}
+
+.vd_serviceincenter_wrapper-meetingrates-list-item-header-price span.special {
+	font-size: 16px;
+	font-weight: 400;
+	color: #e62e66;
+	display: inline-block;
+	margin-top: -5px;
 }
 
 /* virtual offices details styles */
@@ -2605,7 +2608,7 @@ display: block;
 	background-image: url(../images/svg/information-active.svg);
 }
 
-#tooltip_content_wrapper {
+.tooltip_content_wrapper {
 	display: none;
 }
 
@@ -2613,13 +2616,13 @@ display: block;
 	background-color: #fafafc !important;
 }
 
-#tooltip_content {
+.tooltip_content {
 	width: 466px;
 	height: 266px;
 	padding: 30px 25px;
 }
 
-#tooltip_content p {
+.tooltip_content p {
 	/* 	font-family: Lato-Regular; */
 	font-size: 12px;
 	line-height: 1.3;
@@ -2627,14 +2630,9 @@ display: block;
 	padding-bottom: 6px;
 }
 
-#tooltip_content .title {
-/* 	font-family: Lato-Black; */
+.tooltip_content strong {
 	font-weight: 700;
-	font-size: 12px;
-	line-height: 1.3;
 	color: #262626;
-	display: block;
-    padding: 6px 0px;	
 }
 
 /* */
@@ -3479,6 +3477,8 @@ display: block;
 	margin-left: 10px;
 	position: absolute;
 }
+
+.vd_serviceincenter_wrapper-plan {margin: 2em 0 1em;}
 
 .vd_services_header {
 	margin: 60px auto 60px auto;
@@ -4817,9 +4817,9 @@ display: block;
 	float: left;
 }
 .vd_specialoffer-header h1 {	
-	height: 46px;
-	/*font-family: Lato-Bold;*/
+	margin-top: 18px;
 	font-size: 30px;
+	font-weight: 600;	
 	line-height: 1.3;
 	color: #000000;
 	float: left;
@@ -4828,7 +4828,6 @@ display: block;
 	width: 100%;
 	float: left;
 	margin: 25px 0 0 0;
-	/*font-family: Lato-Regular;*/
 	font-size: 20px;
 	line-height: 1.5;
 }
@@ -4840,8 +4839,8 @@ display: block;
 }
 
 .vd_specialoffer-offers-title {
-	/* font-family: Lato-Black; */
 	font-size: 30px;
+	font-weight: 700;
 	line-height: 1.5;
 	color: #000000;
 	text-align: center;	
