--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -1,56 +1,5 @@
-@font-face {
-    font-family: 'Lato-Black';
-    src: url('fonts/lato-black-webfont.woff2') format('woff2'),
-         url('fonts/lato-black-webfont.woff') format('woff'),
-         url('fonts/lato-black-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato-Bold';
-    src: url('fonts/lato-bold-webfont.woff2') format('woff2'),
-         url('fonts/lato-bold-webfont.woff') format('woff'),
-         url('fonts/lato-bold-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato-Italic';
-    src: url('fonts/lato-italic-webfont.woff2') format('woff2'),
-         url('fonts/lato-italic-webfont.woff') format('woff'),
-         url('fonts/lato-italic-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato-Medium';
-    src: url('fonts/lato-medium-webfont.woff2') format('woff2'),
-         url('fonts/lato-medium-webfont.woff') format('woff'),
-         url('fonts/lato-medium-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato-Regular';
-    src: url('fonts/lato-regular-webfont.woff2') format('woff2'),
-         url('fonts/lato-regular-webfont.woff') format('woff'),
-         url('fonts/lato-regular-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'Lato-Semibold';
-    src: url('fonts/lato-semibold-webfont.woff2') format('woff2'),
-         url('fonts/lato-semibold-webfont.woff') format('woff'),
-         url('fonts/lato-semibold-webfont.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
+button, .reserve {cursor: pointer;}
+button.g-loader {background: #ababc6 url(/images/ajax_loader.gif) no-repeat center !important;}
 
 .inner {
 	padding-top: 10px;
