--- a/www/css/delovoy_styles_mobile.css
+++ b/www/css/delovoy_styles_mobile.css
@@ -21,7 +21,8 @@
 	}
 	.index-promo-left-title {
 		font-size: 32px;
-		margin-top: 320px;
+		margin-top: 350px;
+		margin-bottom: 40px;
 		padding: 0;
 		text-align: center;
 	}
@@ -39,7 +40,7 @@
 		top: 0;
 		left: 0;
 		overflow: hidden;
-		background: url("/uploads/images/icons/hamburger.png");
+		background: url("/images/icons/hamburger.png");
 		position: absolute;
 		z-index: 100;
 		background-size: 48px 48px;
@@ -69,7 +70,7 @@
 		display: block;
 	}
 	.open_menu{
-		background: url("/uploads/images/icons/hamburger_close.png") no-repeat;
+		background: url("/images/icons/hamburger_close.png") no-repeat;
 		width: 100%;
 		height: auto;
 		position: absolute;
@@ -103,7 +104,7 @@
 		height: auto;
 	}
 	.header-nav{
-		margin-top: 0;
+		margin-top: 15px;
 	}
 	.header-menu li {
 		float: none;
@@ -129,7 +130,7 @@
 	margin-top: 30px;
 	}
 	.page-index .inner {
-	margin-top: 0;
+	margin-top: 6px;
 	}
 	.header-phone{
 		display: block;
@@ -138,11 +139,11 @@
 		height: 64px;
 		right: 0;
 		z-index: 300;
-		background: url("/uploads/images/icons/phone.png") no-repeat;
+		background: url("/images/icons/phone.png") no-repeat;
 		overflow: hidden;
 		background-size: 40px;
 		top: 8px;
-		background-position: 11px 2px;
+		background-position: 11px 4px;
 	}
 	.header-phone-number{
 		display: none;
@@ -167,7 +168,7 @@
 	.open_menu_phone{
 		width: 100%;
 		height: 300px;
-		background: url("/uploads/images/icons/hamburger_close.png") no-repeat;
+		background: url("/images/icons/hamburger_close.png") no-repeat;
 		background-position: 98% 0;
 		background-size: 48px;
 	}
