z-index for the popup in services

--- a/www/css/delovoy_styles.css
+++ b/www/css/delovoy_styles.css
@@ -3567,6 +3567,7 @@ display: block;
     left: 50%;
     transform: translateX(-50%);
     box-shadow: 0px 0px 100px rgba(0, 0, 0, 0.3);
+    z-index: 2;
 }
 
 .vd_services2_list-item-wrapper-close {
